--- a/src/main/java/home.html
+++ b/src/main/java/home.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>gitgitgit</title>
 </head>
 <body>
-Hello!! What1s now?
+<h1>Nagłówek pierwszy</h1>
+<h2>Nagłówek drugi</h2> 
 </body>
 </html>
