Create styles.css file
Changed h1 in home.html

--- a/src/main/java/home.html
+++ b/src/main/java/home.html
@@ -5,7 +5,8 @@
     <title>gitgitgit</title>
 </head>
 <body>
-<h1>Nagłówek pierwszy</h1>
+<h1>Nagłówek pierwszy
+Teraz zmiana z pusshem i komentarzem</h1>
 <h2>Nagłówek drugi</h2>
 <h3>Zmiana na branchu junk hello!!
 Jestem na masterze a robię zmianę sobie heheh</h3>
