Changes home.html beform merge with junk2

--- a/src/main/java/home.html
+++ b/src/main/java/home.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Nagłówek pierwszy</h1>
-<h2>Nagłówek drugi</h2> 
+<h2>Nagłówek drugi</h2>
+<h3>Dodane przed pierwszym mergem z junk2 tak żeby zmiany były również na masterze</h3>
 </body>
 </html>
